--- a/ebook/outline.ipynb
+++ b/ebook/outline.ipynb
@@ -157,17 +157,17 @@
     "#### [Hadoop Systems and Semantics](19_MRsystems.ipynb) (October 23)\n",
     "  * [Friend of Friends programming example](examples/18_ex_FoF.ipynb)\n",
     "  \n",
-    "#### [Dask Arrays](20_dask_arrays.ipynb)\n",
+    "#### [Dask Arrays](20_dask_arrays.ipynb) (Nov. 1)\n",
     "  * Data parallel and declarative programming. \n",
     "  * Execution graphs \n",
     "  * Lazy evaluation\n",
     "  \n",
-    "#### [Dask Dataframes](21_dask_dataframes.ipynb)\n",
+    "#### [Dask Dataframes](21_dask_dataframes.ipynb) (Nov. 1)\n",
     "  * Parallel pandas\n",
     "  * Slicing and aggregation\n",
     "  * Indexing\n",
     "\n",
-    "#### Introduction to Spark\n",
+    "#### [Introduction to Spark](22_spark.ipynb) (Nov. 6)\n",
     "  * Resilient Distributed Datasets\n",
     "  * Caching\n",
     "  * M/R equivalence\n",
