Updates for Spark FoF.

--- a/ebook/21_dask_dataframes.ipynb
+++ b/ebook/21_dask_dataframes.ipynb
@@ -2504,6 +2504,217 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Date</th>\n",
+       "      <th>DayOfWeek</th>\n",
+       "      <th>DepTime</th>\n",
+       "      <th>CRSDepTime</th>\n",
+       "      <th>ArrTime</th>\n",
+       "      <th>CRSArrTime</th>\n",
+       "      <th>UniqueCarrier</th>\n",
+       "      <th>FlightNum</th>\n",
+       "      <th>TailNum</th>\n",
+       "      <th>ActualElapsedTime</th>\n",
+       "      <th>...</th>\n",
+       "      <th>AirTime</th>\n",
+       "      <th>ArrDelay</th>\n",
+       "      <th>DepDelay</th>\n",
+       "      <th>Origin</th>\n",
+       "      <th>Dest</th>\n",
+       "      <th>Distance</th>\n",
+       "      <th>TaxiIn</th>\n",
+       "      <th>TaxiOut</th>\n",
+       "      <th>Cancelled</th>\n",
+       "      <th>Diverted</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1990-01-01</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1621.0</td>\n",
+       "      <td>1540</td>\n",
+       "      <td>1747.0</td>\n",
+       "      <td>1701</td>\n",
+       "      <td>US</td>\n",
+       "      <td>33</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>86.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>46.0</td>\n",
+       "      <td>41.0</td>\n",
+       "      <td>EWR</td>\n",
+       "      <td>PIT</td>\n",
+       "      <td>319.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>False</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1990-01-02</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1547.0</td>\n",
+       "      <td>1540</td>\n",
+       "      <td>1700.0</td>\n",
+       "      <td>1701</td>\n",
+       "      <td>US</td>\n",
+       "      <td>33</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>73.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>-1.0</td>\n",
+       "      <td>7.0</td>\n",
+       "      <td>EWR</td>\n",
+       "      <td>PIT</td>\n",
+       "      <td>319.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>False</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1990-01-03</td>\n",
+       "      <td>3</td>\n",
+       "      <td>1546.0</td>\n",
+       "      <td>1540</td>\n",
+       "      <td>1710.0</td>\n",
+       "      <td>1701</td>\n",
+       "      <td>US</td>\n",
+       "      <td>33</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>84.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>9.0</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>EWR</td>\n",
+       "      <td>PIT</td>\n",
+       "      <td>319.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>False</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1990-01-04</td>\n",
+       "      <td>4</td>\n",
+       "      <td>1542.0</td>\n",
+       "      <td>1540</td>\n",
+       "      <td>1710.0</td>\n",
+       "      <td>1701</td>\n",
+       "      <td>US</td>\n",
+       "      <td>33</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>88.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>9.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>EWR</td>\n",
+       "      <td>PIT</td>\n",
+       "      <td>319.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>False</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1990-01-05</td>\n",
+       "      <td>5</td>\n",
+       "      <td>1549.0</td>\n",
+       "      <td>1540</td>\n",
+       "      <td>1706.0</td>\n",
+       "      <td>1701</td>\n",
+       "      <td>US</td>\n",
+       "      <td>33</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>77.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>9.0</td>\n",
+       "      <td>EWR</td>\n",
+       "      <td>PIT</td>\n",
+       "      <td>319.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>False</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5 rows × 21 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        Date  DayOfWeek  DepTime  CRSDepTime  ArrTime  CRSArrTime  \\\n",
+       "0 1990-01-01          1   1621.0        1540   1747.0        1701   \n",
+       "1 1990-01-02          2   1547.0        1540   1700.0        1701   \n",
+       "2 1990-01-03          3   1546.0        1540   1710.0        1701   \n",
+       "3 1990-01-04          4   1542.0        1540   1710.0        1701   \n",
+       "4 1990-01-05          5   1549.0        1540   1706.0        1701   \n",
+       "\n",
+       "  UniqueCarrier  FlightNum TailNum  ActualElapsedTime  ...  AirTime  ArrDelay  \\\n",
+       "0            US         33     NaN               86.0  ...      NaN      46.0   \n",
+       "1            US         33     NaN               73.0  ...      NaN      -1.0   \n",
+       "2            US         33     NaN               84.0  ...      NaN       9.0   \n",
+       "3            US         33     NaN               88.0  ...      NaN       9.0   \n",
+       "4            US         33     NaN               77.0  ...      NaN       5.0   \n",
+       "\n",
+       "   DepDelay  Origin Dest Distance  TaxiIn  TaxiOut  Cancelled  Diverted  \n",
+       "0      41.0     EWR  PIT    319.0     NaN      NaN      False         0  \n",
+       "1       7.0     EWR  PIT    319.0     NaN      NaN      False         0  \n",
+       "2       6.0     EWR  PIT    319.0     NaN      NaN      False         0  \n",
+       "3       2.0     EWR  PIT    319.0     NaN      NaN      False         0  \n",
+       "4       9.0     EWR  PIT    319.0     NaN      NaN      False         0  \n",
+       "\n",
+       "[5 rows x 21 columns]"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.head()"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
