--- a/ebook/22_spark.ipynb
+++ b/ebook/22_spark.ipynb
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {
     "tags": []
    },
@@ -83,6 +83,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
+      "23/11/06 21:51:32 WARN Utils: Service 'SparkUI' could not bind on port 4040. Attempting port 4041.\n",
       "                                                                                \r"
      ]
     },
@@ -90,7 +91,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "3.1420248\n"
+      "3.1415524\n"
      ]
     }
    ],
@@ -99,7 +100,7 @@
     "sc = SparkContext(\"local\", \"App Name\",)\n",
     "\n",
     "import random\n",
-    "num_samples = 10000000\n",
+    "num_samples = 100000000\n",
     "def inside(p):     \n",
     "  x, y = random.random(), random.random()\n",
     "  return x*x + y*y < 1\n",
@@ -181,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 12,
    "metadata": {
     "tags": []
    },
@@ -190,7 +191,18 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "                                                                                \r"
+      "23/11/06 22:11:03 WARN Utils: Service 'SparkUI' could not bind on port 4040. Attempting port 4041.\n"
+     ]
+    },
+    {
+     "ename": "AttributeError",
+     "evalue": "'PipelinedRDD' object has no attribute 'sort'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[12], line 7\u001b[0m\n\u001b[1;32m      2\u001b[0m sc \u001b[38;5;241m=\u001b[39m SparkContext(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mlocal\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mApp Name\u001b[39m\u001b[38;5;124m\"\u001b[39m,)\n\u001b[1;32m      4\u001b[0m text_file \u001b[38;5;241m=\u001b[39m sc\u001b[38;5;241m.\u001b[39mtextFile(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m./data/textbible/*\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m      5\u001b[0m counts \u001b[38;5;241m=\u001b[39m \u001b[43mtext_file\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mflatMap\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;28;43;01mlambda\u001b[39;49;00m\u001b[43m \u001b[49m\u001b[43mline\u001b[49m\u001b[43m:\u001b[49m\u001b[43m \u001b[49m\u001b[43mline\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43msplit\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43m \u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m)\u001b[49m\u001b[43m)\u001b[49m\u001b[43m \u001b[49m\u001b[43m\\\u001b[49m\n\u001b[1;32m      6\u001b[0m \u001b[43m             \u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mmap\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;28;43;01mlambda\u001b[39;49;00m\u001b[43m \u001b[49m\u001b[43mword\u001b[49m\u001b[43m:\u001b[49m\u001b[43m \u001b[49m\u001b[43m(\u001b[49m\u001b[43mword\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m1\u001b[39;49m\u001b[43m)\u001b[49m\u001b[43m)\u001b[49m\u001b[43m \u001b[49m\u001b[43m\\\u001b[49m\n\u001b[0;32m----> 7\u001b[0m \u001b[43m             \u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mreduceByKey\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;28;43;01mlambda\u001b[39;49;00m\u001b[43m \u001b[49m\u001b[43ma\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mb\u001b[49m\u001b[43m:\u001b[49m\u001b[43m \u001b[49m\u001b[43ma\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m+\u001b[39;49m\u001b[43m \u001b[49m\u001b[43mb\u001b[49m\u001b[43m)\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43msort\u001b[49m()\n\u001b[1;32m      8\u001b[0m counts\u001b[38;5;241m.\u001b[39msaveAsTextFile(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m/tmp/sparkoutput4\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m     10\u001b[0m sc\u001b[38;5;241m.\u001b[39mstop()\n",
+      "\u001b[0;31mAttributeError\u001b[0m: 'PipelinedRDD' object has no attribute 'sort'"
      ]
     }
    ],
@@ -201,15 +213,15 @@
     "text_file = sc.textFile(\"./data/textbible/*\")\n",
     "counts = text_file.flatMap(lambda line: line.split(\" \")) \\\n",
     "             .map(lambda word: (word, 1)) \\\n",
-    "             .reduceByKey(lambda a, b: a + b)\n",
-    "counts.saveAsTextFile(\"/tmp/sparkoutput2\")\n",
+    "             .reduceByKey(lambda a, b: a + b).sort()\n",
+    "counts.saveAsTextFile(\"/tmp/sparkoutput4\")\n",
     "\n",
     "sc.stop()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 11,
    "metadata": {
     "tags": []
    },
