--- a/ebook/examples/solutions/22_FoF_Spark_soln.ipynb
+++ b/ebook/examples/solutions/22_FoF_Spark_soln.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 13,
    "id": "9eb9eca2-47cd-4201-b6ed-6c4c8ce93d1c",
    "metadata": {
     "tags": []
@@ -107,36 +107,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "id": "dc876d3a-caa7-4ba6-a55c-2869fb36eae4",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "                                                                                \r"
-     ]
-    }
-   ],
+   "execution_count": null,
+   "id": "9824f04e-3c9c-4b23-9884-83babd85a8dc",
+   "metadata": {},
+   "outputs": [],
    "source": [
     "from pyspark import SparkContext\n",
     "\n",
-    "inputdir = \"../data/simple.input\"\n",
-    "outdir = \"/tmp/outputsimple.mr\"\n",
+    "inputdir = \"../data/fof.input\"\n",
+    "outdir = \"/tmp/outputfof.mr\"\n",
     "\n",
     "from pyspark import SparkContext\n",
     "sc = SparkContext(\"local\", \"App Name\",)\n",
     "rdd = sc.textFile(f\"{inputdir}/*\")\n",
     "rdd = rdd.flatMap(line_to_triples)\n",
-    "### TODO add a WordCount style reducer\n",
-    "...\n",
-    "### TODO Identify triples of count >=2\n",
-    "...\n",
-    "### TODO format output to just triples\n",
-    "...\n",
+    "rdd = rdd.map(lambda x: (str(x), 1))\n",
+    "rdd = rdd.reduceByKey(lambda x, y: x + y)\n",
+    "rdd = rdd.filter(lambda x: x[1] > 1)\n",
+    "rdd = rdd.map(lambda x: x[0])\n",
     "rdd.saveAsTextFile(outdir)\n",
     "\n",
     "sc.stop()             "
@@ -207,8 +195,8 @@
    "outputs": [],
    "source": [
     "def filter_diff_idx (x):\n",
-    "    # TODO\n",
-    "    pass"
+    "    if x[1][0] != x[1][1]:\n",
+    "        return x[0]"
    ]
   },
   {
@@ -241,12 +229,9 @@
     "rdd = sc.textFile(f\"{inputdir}/*\")\n",
     "rdd = rdd.flatMap(line_to_triples)\n",
     "rdd = rdd.mapPartitionsWithIndex(add_index)\n",
-    "# TODO self join\n",
-    "...\n",
-    "# TODO filter out matches from same partition\n",
-    "...\n",
-    "# TODO cleanup output\n",
-    "...\n",
+    "rdd = rdd.join(rdd)\n",
+    "rdd = rdd.map(filter_diff_idx)\n",
+    "rdd = rdd.filter(lambda x: x!= None)\n",
     "rdd.saveAsTextFile(outdir)\n",
     "\n",
     "sc.stop()"
@@ -303,7 +288,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 14,
    "id": "ae4e7c60-1961-4657-89e1-1ad0038fb77a",
    "metadata": {
     "tags": []
@@ -312,8 +297,15 @@
    "source": [
     "### Output the remaining list of friends for each friend.\n",
     "def pair_lists(line: str):\n",
-    "    # TODO\n",
-    "    pass"
+    "    fids = np.array(line.split(), dtype=int)\n",
+    "    ret = []\n",
+    "    for i in range(1, len(fids) - 1):\n",
+    "        source = fids[0]\n",
+    "        if source < fids[i]:\n",
+    "            ret.append([f\"{source}, {fids[i]}\", np.concatenate((fids[1:i], fids[i+1:]),)])\n",
+    "        else:\n",
+    "            ret.append([f\"{fids[i]}, {source}\", np.concatenate((fids[1:i], fids[i+1:]),)])            \n",
+    "    return ret    "
    ]
   },
   {
@@ -358,7 +350,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 15,
    "id": "ff86f224-8844-410e-97ef-6777b9110c5b",
    "metadata": {
     "tags": []
@@ -368,14 +360,42 @@
     "### Output the appropriate triples after intersection.\n",
     "def output_triples(x):\n",
     "    output = []\n",
-    "    # TODO\n",
+    "    xar = np.fromstring(x[0], dtype=int, sep=\",\")\n",
+    "    for third in x[1]:\n",
+    "        if xar[0] < xar[1]:\n",
+    "            output.append((third, xar[0], xar[1]))\n",
+    "        else:\n",
+    "            output.append((third, xar[1], xar[0]))\n",
     "    return output\n",
     "        "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
+   "id": "27c12197-0508-45d8-a640-db127f40c325",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[(300, 100, 200), (400, 100, 200)]"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "output_triples(('100, 200', [300, 400]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
    "id": "c99bb673-9690-4530-93f3-00e96bf2d09c",
    "metadata": {
     "tags": []
@@ -387,7 +407,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 17,
    "id": "46febb59-f3d0-4ba2-a71b-17374d213811",
    "metadata": {
     "tags": []
@@ -404,19 +424,16 @@
    "source": [
     "from pyspark import SparkContext\n",
     "\n",
-    "inputdir = \"../data/simple.input\"\n",
-    "outdir = \"/tmp/output.merge\"\n",
+    "inputdir = \"../../data/simple.input\"\n",
+    "outdir = \"/tmp/output.merge8\"\n",
     "\n",
     "from pyspark import SparkContext\n",
     "sc = SparkContext(\"local\", \"App Name\",)\n",
     "rdd = sc.textFile(f\"{inputdir}/*\")\n",
     "rdd = rdd.flatMap(pair_lists)\n",
-    "# group by and turn into lists\n",
     "rdd = rdd.groupByKey().mapValues(list)\n",
-    "# keep only keys with two inputs\n",
     "rdd = rdd.filter(lambda x: len(x[1])==2)\n",
-    "# TODO intersect the two lists\n",
-    "...\n",
+    "rdd = rdd.mapValues(lambda x: np.intersect1d(x[0], x[1]))\n",
     "rdd = rdd.flatMap(output_triples)\n",
     "rdd.saveAsTextFile(outdir)\n",
     "\n",
@@ -483,7 +500,10 @@
     "sc = SparkContext(\"local\", \"App Name\",)\n",
     "rdd = sc.textFile(f\"{inputdir}/*\")\n",
     "rdd = rdd.flatMap(line_to_triples)\n",
-    "...\n",
+    "rdd = rdd.map(lambda x: (str(x), 1))\n",
+    "rdd = rdd.reduceByKey(lambda x, y: x + y)\n",
+    "rdd = rdd.filter(lambda x: x[1] > 1)\n",
+    "rdd = rdd.map(lambda x: x[0])\n",
     "rdd.saveAsTextFile(outdir)\n",
     "\n",
     "sc.stop()                "
@@ -533,7 +553,9 @@
     "sc = SparkContext(\"local\", \"App Name\",)\n",
     "rdd = sc.textFile(f\"{inputdir}/*\")\n",
     "rdd = rdd.flatMap(line_to_triples)\n",
-    "...\n",
+    "rdd = rdd.mapPartitionsWithIndex(add_index)\n",
+    "rdd = rdd.join(rdd)\n",
+    "rdd = rdd.map(filter_diff_idx).filter(lambda x: x!= None)\n",
     "rdd.saveAsTextFile(outdir)\n",
     "\n",
     "sc.stop()"
@@ -580,7 +602,11 @@
     "from pyspark import SparkContext\n",
     "sc = SparkContext(\"local\", \"App Name\",)\n",
     "rdd = sc.textFile(f\"{inputdir}/*\")\n",
-    "...\n",
+    "rdd = rdd.flatMap(pair_lists)\n",
+    "rdd = rdd.groupByKey().mapValues(list)\n",
+    "rdd = rdd.filter(lambda x: len(x[1])==2)\n",
+    "rdd = rdd.mapValues(lambda x: np.intersect1d(x[0], x[1]))\n",
+    "rdd = rdd.flatMap(output_triples)\n",
     "rdd.saveAsTextFile(outdir)\n",
     "\n",
     "sc.stop()"
