update outline through TGiving.

--- a/ebook/outline.ipynb
+++ b/ebook/outline.ipynb
@@ -165,14 +165,38 @@
     "#### [Dask Dataframes](21_dask_dataframes.ipynb) (Nov. 1)\n",
     "  * Parallel pandas\n",
     "  * Slicing and aggregation\n",
-    "  * Indexing\n",
+    "  * Indexing\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8a5bcba6-c43d-4e02-9f89-5bee9e825d6e",
+   "metadata": {},
+   "source": [
     "\n",
     "#### [Introduction to Spark](22_spark.ipynb) (Nov. 6)\n",
     "  * Resilient Distributed Datasets\n",
     "  * Caching\n",
     "  * M/R equivalence\n",
     "  * Checkpointing\n",
-    "  * __Reading__: [Zaharia et al. Resilient Distributed Datasets: A Fault-Tolerant Abstraction for In-Memory Cluster Computing, NSDI, 2012](https://www.usenix.org/system/files/conference/nsdi12/nsdi12-final138.pdf)"
+    "  * __Reading__: [Zaharia et al. Resilient Distributed Datasets: A Fault-Tolerant Abstraction for In-Memory Cluster Computing, NSDI, 2012](https://www.usenix.org/system/files/conference/nsdi12/nsdi12-final138.pdf)\n",
+    "  \n",
+    "#### [Spark Programming](examples/22_FoF_Spark.ipynb) (Nov. 8)\n",
+    "  * Spark join\n",
+    "  * Using memory\n",
+    "  \n",
+    "#### [Ray](23_Ray.ipynb) (Nov. 13)\n",
+    "* Remote functions\n",
+    "* Distributed objects\n",
+    "* Distributed memory management\n",
+    "* **Reading:** [P. Moritz et al. Ray: A Distributed Framework for Emerging AI Applications. OSDI, 2018.](https://arxiv.org/pdf/1712.05889.pdf)\n",
+    "\n",
+    "#### [Ray Actors](24_Ray.ipynb) (Nov. 15)\n",
+    "  * Bulk synchronous parallel\n",
+    "  * barrier synchronization\n",
+    "  * stateful distributed objects \n",
+    "  * service centers\n",
+    "  * ray.get() as a synchronization primitive."
    ]
   },
   {
